--- a/static/index.html
+++ b/static/index.html
@@ -6,13 +6,17 @@
 	<title>HCI Project Portfolio</title>
 </head>
 
+<style>
+body{ background-color:green;}
+</style>
+
 <body>
 	<!-- this is a comment in HTML -->
-	<h1>Michael Bernstein</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
+	<h1>Kenney Cheung</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
 	<h4>Project Portfolio</h4>
 
 	<!-- p means paragraph -->
-	<p>Michael Bernstein is an assistant professor of Computer Science at Stanford University and director of the human-computer interaction group. He combines computation with crowds, designing systems that enable people to connect and coordinate online.</p>
+	<p>Kenney Cheung is a UCSD student at CSE170 Winter 2014.</p>
 
 	<h4>Projects</h4>
 	<ol>
